<resources>
    <string name="app_name">Tutorial4</string>
    <string name="course">Type the course code here</string>
    <string name="studentNo">Type the number of students here</string>
    <string name="indicateGrad">Indicate undergrad or graduate here</string>

    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="display">Display</string>
    <string name="sqlite">SQLite</string>
    <string name="textview">TextView</string>

</resources>
